[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/weapon_free.png" type="Texture" id=1]
[ext_resource path="res://characters/player/levelupchosse.gd" type="Script" id=2]
[ext_resource path="res://assets/bag.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 96, 256, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 224, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 128, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [  ],
"loop": true,
"name": "#default",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "dagger",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "manuscript",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "potion",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "sword",
"speed": 5.0
} ]

[node name="levelupchosse" type="Node2D"]
position = Vector2( -219, -125 )
scale = Vector2( 0.4, 0.4 )
script = ExtResource( 2 )

[node name="Bag" type="Sprite" parent="."]
position = Vector2( 552, 314 )
scale = Vector2( 2.925, 2.72976 )
texture = ExtResource( 3 )

[node name="option1" type="Button" parent="."]
margin_left = 542.5
margin_top = 227.5
margin_right = 628.5
margin_bottom = 257.5

[node name="icon" type="AnimatedSprite" parent="option1"]
position = Vector2( -42.5, 15 )
scale = Vector2( 2.5, 2.5 )
frames = SubResource( 5 )
animation = "potion"

[node name="option2" type="Button" parent="."]
margin_left = 547.5
margin_top = 300.0
margin_right = 633.5
margin_bottom = 332.0

[node name="icon" type="AnimatedSprite" parent="option2"]
position = Vector2( -45, 15 )
scale = Vector2( 2.5, 2.5 )
frames = SubResource( 5 )
animation = "potion"

[node name="option3" type="Button" parent="."]
margin_left = 547.5
margin_top = 360.0
margin_right = 633.5
margin_bottom = 391.0

[node name="icon" type="AnimatedSprite" parent="option3"]
position = Vector2( -45, 17.5 )
scale = Vector2( 2.5, 2.5 )
frames = SubResource( 5 )
animation = "potion"

[connection signal="pressed" from="option1" to="." method="_on_option1_pressed"]
[connection signal="pressed" from="option2" to="." method="_on_option2_pressed"]
[connection signal="pressed" from="option3" to="." method="_on_option3_pressed"]
